# MTG-Tracker

./: .env.example  .gitignore  README.md  pyproject.toml
src/mtgbot/: bot.py  config.py  models.py
src/mtgbot/notifications/: discord_bot.py
src/mtgbot/services/: set_schedule.py  tcgplayer_cart.py  tcgplayer_listings.py  tcgplayer_sales.py  wishlist.py
src/mtgbot/storage/: sets.py  tcgplayer_cart.py  tcgplayer_sales.py  wishlist.py
src/mtgbot/tools/: gamers_guild_feed.py
src/mtgbot/watchers/: base.py  big_box.py  card_kingdom.py  local_store.py  scryfall_sets.py  tcgplayer.py
