[tool.poetry]
name = "mtgbot"
version = "0.1.0"
description = "Discord-driven MTG release watcher and cart automation scaffold"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mtgbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
aiosqlite = "^0.19.0"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
